tests/purs/failing/RecordLabelOnTypeError.out
Error found:
in module [33mRecordLabelOnTypeError[0m
at tests/purs/failing/RecordLabelOnTypeError.purs:8:5 - 8:6 (line 8, column 5 - line 8, column 6)

  Could not match type
  [33m     [0m
  [33m  Int[0m
  [33m     [0m
  with type
  [33m        [0m
  [33m  String[0m
  [33m        [0m

while matching label [33mfield[0m
while checking that type [33m{ field :: Int[0m
                         [33m}             [0m
  is at least as general as type [33m{ field :: String[0m
                                 [33m}                [0m
while checking that expression [33ma[0m
  has type [33m{ field :: String[0m
           [33m}                [0m
in value declaration [33mb[0m

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

